Add DistrictType component
Introduced the new DistrictType component as the first step to refactoring the
Locations module by breaking things into separate moddable classes.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -28,6 +28,7 @@ test_lcs_SOURCES = \
   creature/test-creaturetypecache.cpp \
   creature/test-skill.cpp \
   creature/test-uniquecreatures.cpp \
+  locations/test-districttype.cpp \
   politics/test-alignment.cpp \
   vehicle/test-vehicletype.cpp
 
