Add the District component
Builds on the DistrictType component.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -55,6 +55,10 @@ libcrimesquad_la_SOURCES = \
  items/weapon.cpp items/weapon.h items/weapontype.cpp items/armor.h\
  lcsio.cpp cursesmovie.cpp compat.cpp\
  locationdef.h basemode/activate_sleepers.cpp \
+ locations/district.h          locations/district.cpp \
+ locations/districttype.h      locations/districttype.cpp \
+ locations/world.h             locations/world.cpp \
+ locations/locations.h         locations/locations.cpp \
  monthly/justice.h             monthly/justice.cpp \
  monthly/monthly.h             monthly/monthly.cpp monthly/lcsmonthly.cpp \
  monthly/sleepers.h            monthly/sleepers.cpp \
@@ -74,9 +78,6 @@ libcrimesquad_la_SOURCES = \
  title/highscore.cpp title/newgame.cpp title/saveload.cpp basemode/basemode.cpp\
  title/titlescreen.cpp\
  title/initfile.cpp \
- locations/districttype.h      locations/districttype.cpp \
- locations/world.h             locations/world.cpp \
- locations/locations.h         locations/locations.cpp \
  vehicle/vehicle.h             vehicle/vehicle.cpp \
  vehicle/vehicletype.cpp vehicle/vehicletype.h items/weapontype.h\
  externs.h              globals.cpp \
