Add new Location component to locations module
This change includes adding the new Location class (which will eventually
replace the Locations class) plus infrastructure to load locations types from
XML and use them to create objects of the new class.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -59,6 +59,7 @@ libcrimesquad_la_SOURCES = \
  locations/district.h          locations/district.cpp \
  locations/districttype.h      locations/districttype.cpp \
  locations/districttypecache.h locations/districttypecache.cpp \
+ locations/location.h          locations/location.cpp \
  locations/locationtype.h      locations/locationtype.cpp \
  locations/locationtypecache.h locations/locationtypecache.cpp \
  locations/world.h             locations/world.cpp \
