--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,15 @@ set( SDL_STATIC ON CACHE BOOL "" FORCE )
 set( SDL_SHARED OFF CACHE BOOL "" FORCE )
 add_subdirectory(lib/libsdl2)
 
-if(WIN32 OR MSVC)
+#if(WIN32 OR MSVC)
     add_subdirectory(lib/pdcurses)
     link_libraries(pdcurses)
-else()
-    set(CURSES_NEED_NCURSES TRUE)
-    find_package(Curses REQUIRED)
-    include_directories(${CURSES_INCLUDE_DIRS})
-    link_libraries(${CURSES_LIBRARIES})
-endif()
+#else()
+#    set(CURSES_NEED_NCURSES TRUE)
+#    find_package(Curses REQUIRED)
+#    include_directories(${CURSES_INCLUDE_DIRS})
+#    link_libraries(${CURSES_LIBRARIES})
+#endif()
 
 link_libraries(SDL2-static)
 
