fix warning when building in clion on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,11 @@ link_libraries(pdcurses)
 
 link_libraries(SDL2-static)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static") # mingw build requires some ddls otherwise
+if(MSVC)
+else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static") # mingw build requires some ddls otherwise
+endif()
+
 
 include_directories(src)
 include_directories(src/common)
